write the crypto myself